# SEN-Network

./: .gitignore  Anchor.toml  FRONTEND_INTEGRATION_COMPLETE.md  PHASE_2-5_CHECKPOINT.md  ReadMe.md  WALLET_INTEGRATION_SUMMARY.md  docker-compose.yml  package-lock.json  package.json
.serena/: project.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: ConnectButton.tsx
app/components/visual/: SensorParticles.tsx
app/dashboard/: page.tsx
app/lib/: api.ts  solana.ts
app/market/: page.tsx
app/market/[id]/: page.tsx
app/providers/: WalletProvider.tsx
app/sensors/: page.tsx
app/settings/: page.tsx
backend/: .dockerignore  .gitignore  Dockerfile  package.json  tsconfig.json
backend/docs/: SEN_BACKEND_DUMMIES.md
backend/prisma/: init.sql  schema.prisma
backend/src/lib/: anchor.ts  circuitBreaker.ts  config.ts  db.ts  ipfs.ts  logger.ts  redis.ts
backend/src/types/: index.ts
components/: live-data-ticker.tsx  marketplace-sensor-card.tsx  realtime-chart.tsx  register-sensor-form.tsx  sensor-card.tsx  subscription-modal.tsx  wallet-status-badge.tsx
components/dashboard/: header.tsx  notifications-bell.tsx  revenue-chart.tsx  sidebar.tsx  stat-card.tsx
components/ui/: dynamic-glow-button.tsx  glass-card.tsx
lib/: mock-data.ts  store.ts
programs/sen_network/: Cargo.toml
programs/sen_network/src/: errors.rs  events.rs  lib.rs  state.rs
programs/sen_network/src/instructions/: mod.rs  pay_per_query.rs  register_sensor.rs  submit_hash.rs  subscribe.rs  update_reputation.rs  withdraw_earnings.rs
tests/: sen_network.ts  tsconfig.json
