[package]
name = "sen_network"
version = "1.0.0"
description = "SEN NETWORK - Sensor Economy Network Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sen_network"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"
